# random-graph-generator

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
app/: main.cpp
assets/: research.md
feeds/assets/: results.csv
feeds/in/: 9-10-10-Python.txt  9-11-11-Python.txt  9-12-12-Python.txt  9-13-13-Python.txt  9-14-14-Python.txt  9-15-15-Python.txt  9-16-16-Python.txt  9-17-17-Python.txt  9-18-18-Python.txt  9-19-19-Python.txt  9-20-20-Python.txt  9-21-21-Python.txt  9-22-22-Python.txt  9-23-23-Python.txt  9-24-24-Python.txt  9-25-25-Python.txt  9-26-26-Python.txt  9-27-27-Python.txt  9-28-28-Python.txt  9-29-29-Python.txt  9-30-30-Python.txt  9-31-31-Python.txt  9-32-32-Python.txt  9-33-33-Python.txt  9-34-34-Python.txt  9-35-35-Python.txt  9-36-36-Python.txt  9-37-37-Python.txt  9-38-38-Python.txt  9-39-39-Python.txt  9-40-40-Python.txt  9-41-41-Python.txt  9-42-42-Python.txt  9-43-43-Python.txt  9-44-44-Python.txt  9-45-45-Python.txt  9-46-46-Python.txt  9-47-47-Python.txt  9-48-48-Python.txt  9-49-49-Python.txt  (+56 more)
scripts/: auto_generate.py  benchmark_export.py  generate_inputs.py  run.py
src/: benchmark.cpp  checker.cpp  checkers.cpp  havel_hakimi.cpp  havel_hakimi_recursion.cpp  ioutils.cpp  pairing_model.cpp  sequential_model.cpp
